--- a/Backend/ipso-knowledge-base/ipso-knowledge-base/appsettings.json
+++ b/Backend/ipso-knowledge-base/ipso-knowledge-base/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=KnowledgeBaseDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+  }
+
 }
