--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,35 @@
-# Visual Studio spezifische Dateien
+# Visual Studio specific files
 .vs/
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
 
-# Build-Output-Ordner
+# Build output folders
 bin/
 obj/
 
-# Sonstige
+# React-specific dependencies
+/node_modules
+node_modules
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
